# StringConversion

./: .gitignore  CMakeLists.txt  README.md
StringUtil/: CMakeLists.txt  StringUtil.cpp
StringUtil/Include/StringUtil/: StringUtil.h
StringUtilTests/: CMakeLists.txt  Runner.cpp  stdafx.cpp  stdafx.h
StringUtilTests/Tests/: StringUtilTests.cpp
